api update, javadoc